--- a/index.html
+++ b/index.html
@@ -86,17 +86,14 @@
 <!-- endbuild -->
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 
-<script type="text/javascript" src="../scripts/jsdifflib/diffview.js"></script>
-<script type="text/javascript" src="../scripts/jsdifflib/difflib.js"></script>
-
 
 <script src="viz.js"></script>
 
 
 
-<link rel="stylesheet" type="text/css" href="../scripts/jsdifflib/diffview.css"/>
-<script type="text/javascript" src="../scripts/jsdifflib/diffview.js"></script>
-<script type="text/javascript" src="../scripts/jsdifflib/difflib.js"></script>
+<link rel="stylesheet" type="text/css" href="scripts/jsdifflib/diffview.css"/>
+<script type="text/javascript" src="scripts/jsdifflib/diffview.js"></script>
+<script type="text/javascript" src="scripts/jsdifflib/difflib.js"></script>
 
 
 <script src="scripts/app.js"></script>
