--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
 <head>
     <meta charset="utf-8">
-    <title>Candy UI</title>
+    <title>Dino</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -21,6 +21,7 @@
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
     your browser</a> to improve your experience.</p>
     <![endif]-->
+    <link rel="shortcut icon" href="/favicon.ico" />
 
     <div class="header container">
         <ul class="nav nav-pills pull-right">
