added stats/histogram for functions

--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
 <script src="scripts/controllers/asm.js"></script>
 <script src="scripts/controllers/graph.js"></script>
 <script src="scripts/controllers/diff.js"></script>
+<script src="scripts/controllers/stats.js"></script>
+<script src="scripts/ng-google-chart.js"></script>
+
+
 
 <script src="scripts/services/location-changer.js"></script>
 <!-- endbuild -->
