some more histogram features

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li ng-class="currentController=='diff'?'active':''"><a ng-href="#/diff">Diff</a>
                     </ul>
 
-                    <span style="font-size:30px" class="label label-info">ASM Parser</span>
+                    <a style="font-size:30px" class="label label-info clickable" ng-href="#/asm">ASM Parser</a>
                 </div>
 
                 <!-- Add your site or application content here -->
