show only instructions with count > 0 in histogram

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <script src="scripts/controllers/diff.js"></script>
 <script src="scripts/controllers/stats.js"></script>
 <script src="scripts/ng-google-chart.js"></script>
-
+<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
 
 
 <script src="scripts/services/location-changer.js"></script>
