--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <ul class="nav nav-pills pull-right">
             <li ng-class="currentController=='asm'?'active':''"><a ng-href="#/asm">ASM</a>
                 <li ng-class="currentController=='graph'?'active':''"><a ng-href="#/graph">Graph</a>
-                    <li ng-class="currentController=='diff'?'active':''"><a ng-href="#/diff">Diff</a>
+                    <!-- <li ng-class="currentController=='diff'?'active':''"><a ng-href="#/diff">Diff</a> -->
                     </ul>
 
                     <a style="font-size:30px" class="label label-info clickable" ng-href="#/asm">ASM Parser</a>
@@ -41,29 +41,30 @@
                     <!--<p>Candy</p>-->
                     <!--</div>-->
                 </div>
+            </div>
 
-                <!-- <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha3.js"></script> -->
+            <!-- <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha3.js"></script> -->
 
 
-                <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-                <!--<script>-->
-                <!--(function (i, s, o, g, r, a, m) {-->
-                <!--i['GoogleAnalyticsObject'] = r;-->
-                <!--i[r] = i[r] || function () {-->
-                <!--(i[r].q = i[r].q || []).push(arguments)-->
-                <!--}, i[r].l = 1 * new Date();-->
-                <!--a = s.createElement(o),-->
-                <!--m = s.getElementsByTagName(o)[0];-->
-                <!--a.async = 1;-->
-                <!--a.src = g;-->
-                <!--m.parentNode.insertBefore(a, m)-->
-                <!--})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');-->
-                <!---->
-                <!--ga('create', 'UA-XXXXX-X');-->
-                <!--ga('send', 'pageview');-->
-                <!--</script>-->
+            <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+            <!--<script>-->
+            <!--(function (i, s, o, g, r, a, m) {-->
+            <!--i['GoogleAnalyticsObject'] = r;-->
+            <!--i[r] = i[r] || function () {-->
+            <!--(i[r].q = i[r].q || []).push(arguments)-->
+            <!--}, i[r].l = 1 * new Date();-->
+            <!--a = s.createElement(o),-->
+            <!--m = s.getElementsByTagName(o)[0];-->
+            <!--a.async = 1;-->
+            <!--a.src = g;-->
+            <!--m.parentNode.insertBefore(a, m)-->
+            <!--})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');-->
+            <!---->
+            <!--ga('create', 'UA-XXXXX-X');-->
+            <!--ga('send', 'pageview');-->
+            <!--</script>-->
 
-                <!-- build:js(.) scripts/oldieshim.js -->
+            <!-- build:js(.) scripts/oldieshim.js -->
 <!--[if lt IE 9]>
 <script src="bower_components/es5-shim/es5-shim.js"></script>
 <script src="bower_components/json3/lib/json3.min.js"></script>
@@ -86,6 +87,11 @@
 <!-- endbower -->
 <!-- endbuild -->
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
+
+
+<script src="bower_components/adapt-strap/adapt-strap.min.js"></script>
+<script src="bower_components/adapt-strap/adapt-strap.tpl.min.js"></script>
+<link rel="stylesheet" href="bower_components/adapt-strap/adapt-strap.min.css"/>
 
 
 <script src="viz.js"></script>
